--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "this is a dummy api",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
-  },
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+ },
   "author": "Yousra Khurshid",
   "license": "ISC",
   "dependencies": {
