--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,13 @@
     "version": 2,
     "builds": [
         {
-            "src": "server.js",
+            "src": "index.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
-            "src": "/index.js",
+            "src": "/(.*)",
             "dest": "server.js"
         }
     ]
